tests/baselines/reference/typeAliasesDoNotMerge.errors.txt
typeAliasesDoNotMerge.ts(1,13): error TS2395: Individual declarations in merged declaration 'A' must be all exported or all local.
typeAliasesDoNotMerge.ts(2,6): error TS2395: Individual declarations in merged declaration 'A' must be all exported or all local.


==== typeAliasesDoNotMerge.ts (2 errors) ====
    export type A = {}
                ~
!!! error TS2395: Individual declarations in merged declaration 'A' must be all exported or all local.
    type A = {}
         ~
!!! error TS2395: Individual declarations in merged declaration 'A' must be all exported or all local.
    